src/test/compile-fail/struct-fields-missing.rs
struct BuildData {
    foo: int,
    bar: ~int
}

fn main() {
    let foo = BuildData { //~ ERROR missing field: `bar`
        foo: 0
    };
}
